# kaspa-gemini-intelligence

./: .env.example  .gitignore  Cargo.toml  DATABASE_SECURITY.md  README.md  SECURITY_ADVISORIES.md  SECURITY_CHECKLIST_ASVS.md  apply_migration.sql  audit.toml  check.ps1  deny.toml  enterprise.db-shm  enterprise.db-wal  kaspa_bot.db  project_code_export.txt
.cargo/: audit.toml
.sqlx/: query-00f910241f871f0a7d2b32051d77ab4d9010e731d74d7292dd41a5328d439afd.json  query-15dabd5370646bf586e12c91723eb7c0e35945db683f2336789d880a647e4273.json  query-217ed2309014948f1f3c30a99698f45ca5f489f66c054ee5116ae0ccdf78a19a.json  query-448602617b5dff1c0aceba407ee255881949fe137d95db09e6537f05d1e6e386.json  query-76af50ece2e2cb8e4622694bcb7e677f64cc4de38b3135f1806870b514ed451c.json  query-83369012c88a46e9c3d9110b83c362f9de231f582e20d2f41524b3f783b0bad1.json  query-86597ccb3198775a564b51898d8a4e25099cc3406a6cb9bad74f6b5861830dcd.json  query-9a49fe22398a6945dbb9eaaceee5ab6ba449b20ecf010a07d72122566e0b77d4.json  query-9a5524b6dd5ae664df009b8b743a9ee544f4dbe84fbb7a836a50a210f89e75ec.json  query-9bc57f526252b3cb8d91c6eaa4a7720525b537ad946fee1e4720875212d33b51.json  query-9e7fbce4e3e9865b124222bf038ebea371082e96b3a8f9118ac6932934c4a0bb.json  query-9f9763bbc996c026e32fbc0d874d96b84b8ca6dca9bd68ca14ec445ed13c7378.json  query-adb637825909b2f6b9369418c72ed57d48fc243ec799f9f1fbefd61a1a9353c8.json  query-ecbecba0baa6fc2fc48c02058f29e42686748b8fd92a479f4347d8a28d2b78f4.json
migrations/: 0001_database_security.sql  0002_retention_helpers.sql  0003_alert_delivery_setting.sql  0004_admin_audit_and_delivery_queue.sql  0005_delivery_queue_payload.sql  (+9 more)
(+110 files in other folders)
