[package]
name = "kaspa-pulse"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Kaspa Pulse Mining Bot - Lightweight community build"

[dependencies]
tokio = { version = "1", features = ["full", "time", "tracing"] }
tokio-util = "0.7"
teloxide = { version = "0.13", features = ["macros", "webhooks-axum"] }
axum = "=0.7.9"

async-trait = "0.1.80"
anyhow = "1.0"
thiserror = "2.0"

kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.1.0" }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "json"] }

chrono = "0.4"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
sysinfo = "0.30"
dashmap = "6.1"
governor = "0.6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
serde_nested_with = { git = "https://github.com/murar8/serde_nested_with", rev = "ee200a4978ae4cc7da5469af0212431b0f8919a1" }

[features]
default = []

[profile.dev]
opt-level = 1


